Go_Py_ms_CICD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv
spec:
  selector:
    app: conv
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv
  template:
    metadata:
      labels:
        app: conv
    spec:
      containers:
      - name: conv
        image: gcr.io/qwiklabs-gcp-02-9e77b2642b4b/conv:1.0.0
        ports:
        - containerPort: 9000
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: gcr.io/qwiklabs-gcp-02-9e77b2642b4b/frontend:1.0.1
        ports:
        - containerPort: 5000
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
