Go_Py_ms_CICD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: convergg.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front
            port: 
              number: 5000
